# pelikan

./: .clang-format  .gitignore  .gitmodules  .syntastic_c_config  .travis.yml  01-project.md  02-blog.md  03-links.md  03-talks.md  04-links.md  CMakeLists.txt  Cargo.toml  Dockerfile  HEADER  LICENSE  Makefile.am  NOTICE  OWNERS  README.cmake  README.md  _config.yml  blog.md  config.h.in  configure.ac  index.html  project.md  resources.md  test-coverage.sh
benchmarks/: CMakeLists.txt  bench_micro.c  bench_shared.c  bench_storage.c  bench_storage.h  shared.c  thrpt_bench.c
benchmarks/config/: bench.conf
benchmarks/plot/: plot.py
benchmarks/scripts/: efficiency.py  mix_workloads.py  run_thrpt_bench.sh  run_trace_replay.sh  run_trace_replay_thrpt.sh
benchmarks/storage_cuckoo/: storage_cuckoo.c
benchmarks/storage_seg/: CMakeLists.txt  storage_seg.c
benchmarks/storage_slab/: CMakeLists.txt  storage_slab.c
benchmarks/trace_replay/: reader.c  reader.h  reader_mt.h  reader_pl.h  trace_replay.c
benchmarks/trace_replay/trace_conv/: trace_conv.py
rust/ccommon-backend/: Cargo.toml
rust/ccommon-backend/src/: c_export.rs
rust/ccommon-rs/: Cargo.toml
rust/ccommon-rs/src/: ccbox.rs  error.rs
rust/ccommon-rs/tests/: derive_metrics.rs  log.rs
rust/ccommon_rs/: Cargo.toml
rust/ccommon_rs/src/: bstring.rs  lib.rs  ptrs.rs  util.rs
src/: .gitignore  CMakeLists.txt  Makefile.am  bb_main.c  bb_memcache.c  bb_memcache.h  bb_stats.h  cc_array.c  cc_bstring.c  cc_debug.c  cc_log.c  cc_mm.c  cc_option.c  cc_print.c  cc_rbuf.c  cc_signal.c
src/background/: #core.h#  .#core.h
src/buffer/: CMakeLists.txt  Cargo.toml  cc_buf.c  cc_dbuf.c
src/buffer/src/: lib.rs
src/channel/: cc_pipe.c  cc_tcp.c
src/client/: CMakeLists.txt  README.md
src/client/network/: CMakeLists.txt  cli_network.c  cli_network.h
src/client/pingclient-rs/: Cargo.toml
src/client/redis_cli/: CMakeLists.txt  cli.c  cli.h  main.c  setting.c  setting.h
src/client/resp_cli/: CMakeLists.txt  cli.c  cli.h  main.c  setting.h
src/common/: Cargo.toml
src/common/src/: bytes.rs  expiry.rs  ssl.rs  time.rs  traits.rs
src/config/: Cargo.toml
src/config/src/: admin.rs  array.rs  bloom.rs  bloomcache.rs  klog.rs  lib.rs  momento_proxy.rs  proxy.rs  segcache.rs  server.rs  sockio.rs  tcp.rs
src/core/: CMakeLists.txt  admin.c  admin.h  background.c  background.h  context.h  core.c  core.h  server.c  server.h  shared.c  shared.h  worker.c  worker.h
src/core/admin/: CMakeLists.txt  Cargo.toml  admin.c  admin.h  debug.c  debug.h
src/core/data/: CMakeLists.txt  pubsub.c  pubsub.h  server.c  server.h  shared.c  shared.h  worker.c  worker.h
src/core/proxy/: Cargo.toml
src/core/server/: CMakeLists.txt  Cargo.toml  server.c
src/core/server-iouring/: Cargo.toml
src/core/server_legacy/: Cargo.toml
src/core/waker/: Cargo.toml
src/core/worker/: CMakeLists.txt  worker.c
src/cuckoo/: bb_cuckoo.c  bb_cuckoo.h  bb_item.h
src/data_structure/: CMakeLists.txt  shared.h
src/data_structure/bitmap/: CMakeLists.txt  README.md  (+2 more)
src/datapool/: CMakeLists.txt  datapool.h  datapool_pmem.c  datapool_shm.c
src/entrystore/: Cargo.toml
src/event/: CMakeLists.txt  cc_epoll.c  cc_kqueue.c
src/hash/: CMakeLists.txt  cc_lookup3.c
src/hotkey/: CMakeLists.txt  counter_table.c  counter_table.h  hotkey.c  hotkey.h  kc_map.c  queue.c  queue.h
src/logger/: Cargo.toml
src/macros/: Cargo.toml
src/memcache/: bb_codec.c  bb_codec.h  bb_constant.h  bb_request.c  bb_request.h  bb_response.c  bb_response.h
src/net/: Cargo.toml
src/pingserver/: CMakeLists.txt  admin_helper.c  main.c  process.c  process.h  setting.h  stats.h  worker_helper.c
src/protocol/: CMakeLists.txt  admin_include.h  memcache_include.h  ping_include.h
src/queues/: Cargo.toml
src/redis/: CMakeLists.txt  main.c  setting.h
src/rust-util/: CMakeLists.txt
src/rustcore/: CMakeLists.txt  Cargo.toml
src/server/: CMakeLists.txt
src/session/: Cargo.toml
src/slimcache/: CMakeLists.txt  admin_helper.c  bb_core.c  bb_core.h  bb_global.h  bb_main.c  bb_process.c  bb_process.h  bb_setting.h  bb_stats.h  core_worker.c  main.c  process.c  process.h  setting.c  setting.h  stats.c  stats.h
src/stats/: cc_metric.c  cc_stats_log.c
src/storage/: CMakeLists.txt
src/stream/: CMakeLists.txt  cc_sockio.c
src/time/: CMakeLists.txt  bb_time.c  bb_time.h  cc_timer_darwin.c  cc_timer_linux.c  cc_wheel.c  time.c  time.h
src/tutorial/: CMakeLists.txt
src/twemcache/: CMakeLists.txt  bb_core.c  bb_core.h  bb_main.c  bb_process.c  bb_process.h  bb_setting.h  bb_stats.h  core_worker.c  main.c  process.c  process.h  setting.c  setting.h  stats.c  stats.h  worker_helper.c
src/twemcache_shared/: CMakeLists.txt  admin_helper.c  worker_helper.c
src/util/: CMakeLists.txt  bb_core.c  bb_core.h  bb_core_server.c  bb_core_server.h  bb_core_shared.c  bb_core_shared.h  bb_core_worker.c  bb_core_worker.h  bb_procinfo.c  bb_procinfo.h  bb_util.c  bb_util.h  core.c  core.h  core_server.c  core_server.h  core_shared.c  core_worker.c  log_core.c  log_core.h  procinfo.c  procinfo.h  stats.h  util.c  util.h
test/: .gitignore  CMakeLists.txt  Makefile.am  check_memcache.c
test/array/: CMakeLists.txt  check_array.c
test/bstring/: CMakeLists.txt  check_bstring.c
test/buffer/: check_buf.c
test/data_structure/: CMakeLists.txt
test/datapool/: CMakeLists.txt  check_datapool.c
test/event/: CMakeLists.txt
test/fuzz/: build.sh  fuzzer.c
test/hotkey/: .#check_queue.c  CMakeLists.txt
test/integration/: CMakeLists.txt  base.py  client.py  loader.py  pelikan_client.py  pelikan_server.py  server.py  test_twemcache.py  test_twemcache_basic.py
test/log/: CMakeLists.txt  check_log.c
test/metric/: CMakeLists.txt  check_metric.c
test/option/: CMakeLists.txt
test/pipe/: CMakeLists.txt
test/pool/: check_pool.c
test/protocol/: CMakeLists.txt
test/rbuf/: CMakeLists.txt
test/ring_array/: CMakeLists.txt  check_ring_array.c
test/server/: CMakeLists.txt
test/storage/: CMakeLists.txt
test/tcp/: check_tcp.c
test/time/: CMakeLists.txt  check_time.c
(+1517 files in other folders)
