[workspace]
members = [
    "src/common",
    "src/config",
    "src/core/proxy",
    "src/core/server",
    "src/entrystore",
    "src/logger",
    "src/macros",
    "src/protocol/admin",
    "src/protocol/common",
    "src/protocol/memcache",
    "src/protocol/ping",
    "src/protocol/thrift",
    "src/proxy/momento",
    "src/proxy/ping",
    "src/proxy/thrift",
    "src/queues",
    "src/server/pingserver",
    "src/server/segcache",
    "src/service/common",
    "src/service/memcache",
    "src/service/ping",
    "src/session",
    "src/storage/datapool",
    "src/storage/seg",
    "src/storage/types",
]

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0
