[workspace.package]
version = "0.3.0"
edition = "2021"
homepage = "https://pelikan.io"
repository = "https://github.com/twitter/pelikan"
license = "Apache-2.0"

[workspace]
members = [
    "src/common",
    "src/config",
    "src/core/admin",
    "src/core/proxy",
    "src/core/server",
    "src/core/waker",
    "src/entrystore",
    "src/logger",
    "src/macros",
    "src/net",
    "src/protocol/admin",
    "src/protocol/common",
    "src/protocol/memcache",
    "src/protocol/ping",
    "src/protocol/resp",
    "src/protocol/thrift",
    "src/proxy/momento",
    "src/proxy/ping",
    "src/proxy/thrift",
    "src/queues",
    "src/server/pingserver",
    "src/server/segcache",
    "src/session",
    "src/storage/bloom",
    "src/storage/datapool",
    "src/storage/seg",
    "src/storage/types",
]

[workspace.dependencies]
ahash = "0.8.0"
arrayvec = "0.7.2"
backtrace = "0.3.66"
bitvec = "1.0.1"
blake3 = "1.3.1"
boring = "2.1.0"
boring-sys = "2.1.0"
bytes = "1.2.1"
clap = "2.33.3"
crossbeam-channel = "0.5.6"
crossbeam-queue = "0.3.5"
foreign-types-shared = "0.3.1"
jemallocator = "0.5.0"
libc = "0.2.134"
log = "0.4.17"
memmap2 = "0.2.2"
metrohash = "1.0.6"
mio = "0.8.4"
nom = "5.1.2"
proc-macro2 = "1.0.46"
quote = "1.0.21"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_xoshiro = "0.6.0"
rustcommon-logger = { git = "https://github.com/twitter/rustcommon", rev = "87e0c87" }
rustcommon-metrics = { git = "https://github.com/twitter/rustcommon", rev = "87e0c87" }
rustcommon-time = { git = "https://github.com/twitter/rustcommon", rev = "87e0c87" }
serde = "1.0.145"
serde_json = "1.0.85"
slab = "0.4.7"
syn = "1.0.101"
thiserror = "1.0.24"
tiny_http = "0.11.0"
toml = "0.5.9"
twox-hash = { version = "1.6.3", default-features = false }
zookeeper = "0.6.1"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = true
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.dev]
debug = true
opt-level = 0
